--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "pages/*": ["src/pages/*"],
+      "components/*": ["src/components/*"],
+      "hooks/*": ["src/hooks/*"],
+      "data/*": ["src/data/*"],
+      "theme/*": ["src/theme/*"]
+    }
   },
   "include": ["src"]
 }
